--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <section id="sec01">
             <div class="banner_silde_wrap">
                 <ul class="sildes">
-                    <li class="silde_img"><img src="/image/banner_01.png" alt="#"></li>
-                    <li class="silde_img"><img src="/image/banner_02.png" alt="#"></li>
-                    <li class="silde_img"><img src="/image/banner_03.png" alt="#"></li>
+                    <li class="silde_img"><img src="./image/banner_01.png" alt="#"></li>
+                    <li class="silde_img"><img src="./image/banner_02.png" alt="#"></li>
+                    <li class="silde_img"><img src=./image/banner_03.png" alt="#"></li>
                 </ul>
             </div>
             <div class="headline">
@@ -45,27 +45,27 @@
                     <P>고객님의 소중한 추억을 남기는 과정도 행복한 기억으로 남을 수 있도록, 일본인 직원이 <br class="mobile-br">상시 대기하여 상담하고 있습니다. <br><br>
                         또한, 고객님 개인의 상황과 취향을 위해 꼼꼼한 현지 직원의 상담과 더불어 한국에 있는 다양한 컨셉을 가진 스튜디오들과 함께 일하며 최상의 고객경험을 위해 노력하고 있습니다.</P>
                 </div>
-                <div class="img_box"><img src="/image/sec_02_img.png" alt="#"></div>
+                <div class="img_box"><img src="./image/sec_02_img.png" alt="#"></div>
             </div>
             <div class="content_bottom">
                 <h2 class="contents_title">나에게 딱 맞는 스튜디오</h2>
                 <ul class="contents_box">
                     <li class="contents_box_element">
-                        <img class="contents_img" src="/image/studio_01.png">
+                        <img class="contents_img" src="./image/studio_01.png">
                         <div class="contents_text_box">
                             <h6 class="contents_text_title">가족 또는 친구와 함께하는 순간</h6>
                             <p class="contents_text_discription">소중한 사람들과 함께하는 시간을 기념해<br>사진으로 간직하세요.</p>
                         </div>
                     </li>
                     <li class="contents_box_element">
-                        <img class="contents_img" src="/image/studio_02.png">
+                        <img class="contents_img" src="./image/studio_02.png">
                         <div class="contents_text_box">
                             <h6 class="contents_text_title">나의 소중한 결혼식 또는 행사</h6>
                             <p class="contents_text_discription">결혼식, 기념일, 베이비샤워 등<br>내 인생에서 중요한 날을<br>아름다운 사진으로 기록하세요.</p>
                         </div>
                     </li>
                     <li class="contents_box_element">
-                        <img class="contents_img" src="/image/studio_03.png">
+                        <img class="contents_img" src="./image/studio_03.png">
                         <div class="contents_text_box">
                             <h6 class="contents_text_title">가족 또는 친구와 함께하는 순간</h6>
                             <p class="contents_text_discription">한국에서만의 특별한 경험<br>전통의상 체험, 혹은 아이돌처럼<br>다양한 컨셉으로 내 인생의 추억을 만들어요.</p>
@@ -79,21 +79,21 @@
             <h2 class="contents_title">나에게 필요한 플랜</h2>
             <ul class="contents_box">
                     <li class="contents_box_elements">
-                        <img src="/image/sec_03_plan01.png">
+                        <img src="./image/sec_03_plan01.png">
                         <div class="contents_box_element">
                             <button class="secondary_large">스튜디오 35,000円~</button>
                             <p>제휴하고 있는 다양한 전문 스튜디오의<br>촬영장소를 선택합니다.</p>
                         </div>
                     </li>
                      <li class="contents_box_elements">
-                        <img src="/image/sec_03_plan02.png">
+                        <img src="./image/sec_03_plan02.png">
                         <div class="contents_box_element">
                             <button class="secondary_large">의상 + 스튜디오 + 40,000円~</button>
                             <p>다양한 컨셉의 전문 스튜디오 선택과<br>한복, 드레스 등 다양한  맞는 의상을 대여할 수 있습니다.</p>
                         </div>
                     </li>
                     <li class="contents_box_elements">
-                         <img src="/image/sec_03_plan03.png">
+                         <img src="./image/sec_03_plan03.png">
                          <div class="contents_box_element">
                             <button class="secondary_large">의상 + 스튜디오 + 액자 45,000円~</button>
                             <p>다양한 컨셉의 전문 스튜디오 선택과<br>한복, 드레스 등 다양한  맞는 의상을 대여하고,<br>촬영된 사진을 액자로 배송받을 수 있습니다.</p>
@@ -159,9 +159,9 @@
             <div class="footer_right">
                 <ul>
                     <li class="footer_sns_box">
-                        <a href="#" class="footer_sns">INSTAGRAM<img src="/image/icon/instagram.png"></a>
-                        <a href="#" class="footer_sns">X(TWITTER)<img src="/image/icon/twitter.png"></a>
-                        <a href="#" class="footer_sns">LINE<img src="/image/icon/line.png"></a>
+                        <a href="#" class="footer_sns">INSTAGRAM<img src="./image/icon/instagram.png"></a>
+                        <a href="#" class="footer_sns">X(TWITTER)<img src="./image/icon/twitter.png"></a>
+                        <a href="#" class="footer_sns">LINE<img src="./image/icon/line.png"></a>
                     </li>
                 </ul>
             </div>
