--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul class="sildes">
                     <li class="silde_img"><img src="./image/banner_01.png" alt="#"></li>
                     <li class="silde_img"><img src="./image/banner_02.png" alt="#"></li>
-                    <li class="silde_img"><img src=./image/banner_03.png" alt="#"></li>
+                    <li class="silde_img"><img src=".s/image/banner_03.png" alt="#"></li>
                 </ul>
             </div>
             <div class="headline">
@@ -150,7 +150,12 @@
             <div class="footer_left">
                 <div class="footer_left_top">
                      <h1>In the Picture</h1>
-                      <button class="primary_large">무료상담하기</button>
+                     <button class="primary_large">
+                         <a href="https://www.instagram.com/thesinsa10/" target="_blank">무료상담하기</a>
+                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
+                           <path d="M9.77982 5.04841C9.95267 4.88394 10.1838 4.79484 10.4223 4.80069C10.6608 4.80654 10.8872 4.90686 11.0518 5.07961L17.053 11.3796C17.2126 11.547 17.3016 11.7694 17.3016 12.0006C17.3016 12.2319 17.2126 12.4542 17.053 12.6216L11.053 18.9216C10.9715 19.0073 10.874 19.076 10.766 19.124C10.6579 19.1719 10.5415 19.1981 10.4233 19.2011C10.3051 19.204 10.1875 19.1837 10.0772 19.1412C9.96693 19.0987 9.86607 19.0349 9.78042 18.9534C9.69477 18.8719 9.62601 18.7744 9.57806 18.6663C9.53011 18.5583 9.50391 18.4419 9.50096 18.3237C9.498 18.2055 9.51836 18.0879 9.56085 17.9776C9.60334 17.8673 9.66715 17.7665 9.74862 17.6808L15.1594 12L9.74742 6.31921C9.58311 6.1462 9.49422 5.91502 9.50029 5.6765C9.50637 5.43797 9.60691 5.21282 9.77982 5.04841Z" fill="white"/>
+                         </svg>           
+                     </button>
                 </div>
                 <p class="footer_left_bottom">
                     Copyright © In the Picture ALL Right Reserved
@@ -159,16 +164,16 @@
             <div class="footer_right">
                 <ul>
                     <li class="footer_sns_box">
-                        <a href="#" class="footer_sns">INSTAGRAM<img src="./image/icon/instagram.png"></a>
-                        <a href="#" class="footer_sns">X(TWITTER)<img src="./image/icon/twitter.png"></a>
-                        <a href="#" class="footer_sns">LINE<img src="./image/icon/line.png"></a>
+                        <a href="https://www.instagram.com/thesinsa10/" target="_blank" class="footer_sns">INSTAGRAM<img src="./image/icon/instagram.png"></a>
+                        <a href="https://www.instagram.com/thesinsa10/" target="_blank" class="footer_sns">X(TWITTER)<img src="./image/icon/twitter.png"></a>
+                        <a href="https://www.instagram.com/thesinsa10/" target="_blank" class="footer_sns">LINE<img src="./image/icon/line.png"></a>
                     </li>
                 </ul>
             </div>
         </footer>
         <!--bottom button-->
         <div class="bottom_button">
-            <button class="primary_large">무료상담하기
+            <button class="primary_large"> <a href="https://www.instagram.com/thesinsa10/" target="_blank">무료상담하기</a>
                 <svg xmlns="http://www.w3.org/2000/svg" width="9" height="16" viewBox="0 0 9 16" fill="none">
                    <path d="M0.77982 1.04841C0.952671 0.883937 1.18376 0.794835 1.42228 0.800686C1.6608 0.806537 1.88724 0.906861 2.05182 1.07961L8.05302 7.37961C8.21258 7.54699 8.30159 7.76936 8.30159 8.00061C8.30159 8.23185 8.21258 8.45423 8.05302 8.62161L2.05302 14.9216C1.97155 15.0073 1.874 15.076 1.76596 15.124C1.65791 15.1719 1.54148 15.1981 1.42331 15.2011C1.30514 15.204 1.18754 15.1837 1.07723 15.1412C0.966925 15.0987 0.866069 15.0349 0.780421 14.9534C0.694773 14.8719 0.62601 14.7744 0.578059 14.6663C0.530109 14.5583 0.503909 14.4419 0.500956 14.3237C0.498004 14.2055 0.518355 14.0879 0.56085 13.9776C0.603344 13.8673 0.667148 13.7665 0.74862 13.6808L6.15942 8.00001L0.74742 2.31921C0.583106 2.1462 0.494217 1.91502 0.500292 1.6765C0.506368 1.43797 0.606911 1.21282 0.77982 1.04841Z" fill="white"/>
                 </svg>
